css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: "Kelly Slab", sans-serif;
    padding-top: 60px;
    background-color: #d7c2af;
}




.custom-container {
    max-width: 1200px;
    margin: 0 auto;
}

header {
    background-color: #A8B9C0;
    padding: 10px 0;
    position: fixed; /* Fixes the header at the top of the page */
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1000; /* Ensures the header stays above other content */
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Optional: Adds a shadow for better visibility */
}

.header-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 20px;
}

.logo img {
    height: 50px;
}

.contacts {
    display: flex;
    align-items: center;
}
/* The Dialog (background) */
.dialog {
    display: none;
    position: fixed;
    z-index: 2;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.4);
}

/* Dialog Content */
.dialog-content {
    background-color: #b0bcc1; /* Same color as the card in the image */
    margin: 15% auto;
    padding: 20px;
    border: 1px solid #888;
    width: 300px;
    border-radius: 8px;
    text-align: center;
    color: #000; /* Text color */
    font-family: 'Arial', sans-serif; /* Replace with your preferred font */
}

/* The Close Button */
.close {
    color: #000;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: #aaa;
    text-decoration: none;
    cursor: pointer;
}

/* Icon and Text Styling */
.dialog-body p {
    margin: 10px 0;
    font-size: 18px;
    line-height: 1.5;
}

.dialog-body img {
    margin: 10px 0;
}

.dialog-body p img {
    width: 20px;
    vertical-align: middle;
    margin-right: 8px;
}
.contacts img {
    margin-right: 10px;
    height: 24px;
}

.main-content{
    width: 100%;
    display: flex;
    justify-content: space-between;
    margin-top: 40px;
}

.sidebar{
    width: 22%;
    margin-right: 50px;
}

.image-block{
    width: 78%;

}

.title{
    text-align: center;
    font-weight: bold;
}

img{
    max-width: 100%;
    height: auto;
}

.sidebar-card{
    width: 100%;
    margin-bottom: 40px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    height: 252px;
    border-radius: 5px;
    border: 1px solid white;
    background-color: #A8B9C0;
}


.sidebar-image img:hover{
    transform: scale(1.3);
}

.second-part{
    margin-top: 50px;
}


swiper-container {
    width: 100%;
    height: 100%;
}

swiper-slide {
    text-align: center;
    font-size: 18px;
    background: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
}

swiper-slide img {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.autoplay-progress {
    position: absolute;
    right: 16px;
    bottom: 16px;
    z-index: 10;
    /*width: 48px;*/
    height: 48px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: bold;
}

.autoplay-progress svg {
    position: absolute;
    left: 0;
    top: 0;
    z-index: 10;
    width: 100%;
    height: 100%;
    stroke-width: 4px;
    fill: none;
    transform: rotate(-90deg);
}







.main-section{
    display: flex;
    flex-direction: column;
}

.two-section {
    display: flex;
}
.question-block {
    text-align: center;
    margin-top: 50px;
}
.title h3 {
    margin-bottom: 30px;
}
.buttons-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}
.one-line, .second-line {
    display: flex;
    justify-content: space-between;
    width: 100%;
    flex-wrap: wrap;
}

.second-line{
    width: 50%;
}

.pay{
    width: 45%;
}

.brand{
    width: 45%;
}

.button-item {
    background-color: white;
    border: 1px solid #ccc;
    border-radius: 15px;
    padding: 10px 20px;
    width: 100%;
    margin-bottom: 10px;
    cursor: pointer;
    transition: background-color 0.3s, height 0.3s;
    overflow: hidden;
    position: relative;
}
.button-item:hover {
    background-color: #f0f0f0;
}
.button-title {
    display: block;
}
.button-content {
    font-family: "Inter", sans-serif;
    display: none;
    text-align: left;
    padding: 10px;
}

li{
    list-style-type: none;
}
.li-block{
    display: flex;
}

.question-text p{
    margin: 0;
}

.highlight{
    font-weight: bold;
    font-style: italic;
}

.question-text{
    margin-bottom: 20px;
}

.note{
    margin: 0;
}
.expanded .button-title {
    display: none;
}
.expanded .button-content {
    display: block;
}
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0,0,0,0.4);
    font-family: "Inter", sans-serif;
}

.modal-content {
    background-color: #d7c2af;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
    max-width: 660px;
    border-radius: 10px;
    text-align: center;
}

.close {
    color: #aaa;
    font-size: 28px;
    font-weight: bold;
    display: flex;
     justify-content: end;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

.modal-content h2 {
    font-size: 1.5em;
    margin-bottom: 10px;
}

.modal-content p {
    margin: 5px 0;
}

.qr-code {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 10px;
}

.qr-code img {
    width: 150px;
    height: 150px;
}

.qr-code p {
    font-size: 1.2em;
    margin-top: 10px;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}
.clients-block{
    margin-top: 50px;
}

.clients-section {
    text-align: center;
}

.clients-section h2 {
    font-size: 2em;
    margin-bottom: 20px;
}
/* ... */

